--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.13.1",
     "react": "16.7.0",
     "react-dom": "16.7.0",
+    "react-image-fallback": "^8.0.0",
     "react-redux": "5.1.1",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
