--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "connected-react-router": "4.5.0",
+    "debounce": "^1.2.0",
+    "lodash.debounce": "^4.0.8",
     "node-sass": "^4.13.1",
     "react": "16.7.0",
+    "react-debouncing": "^1.0.3",
     "react-dom": "16.7.0",
     "react-image-fallback": "^8.0.0",
     "react-redux": "5.1.1",
@@ -27,7 +30,9 @@
     "reselect": "^4.0.0",
     "sanitize.css": "7.0.3",
     "serve": "^11.2.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "throttle-debounce": "^2.1.0",
+    "use-debounce": "^3.3.0"
   },
   "browserslist": [
     ">0.2%",
