--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "connected-react-router": "4.5.0",
     "node-sass": "^4.13.1",
+    "query-string": "^6.11.0",
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "react-image-fallback": "^8.0.0",
