--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "connected-react-router": "4.5.0",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.13.1",
     "query-string": "^6.11.0",
     "react": "16.7.0",
