--- a/public/data/pets/neenya/data.jsonc
+++ b/public/data/pets/neenya/data.jsonc
@@ -6,20 +6,52 @@
   "name": "Neenya",
   "scene": "outside",
   "thumbnail": "thumbnail.jpg",
-  "behaviors": {
-    "DEFAULT": { "animations": [ "idle_01" ], "overlay": "happy" },
-    "IDLE_HAPPY": { "animations": [ "idle_01" ], "overlay": "happy" },
-    "IDLE_SAD": { "animations": [ "idle_sad" ], "overlay": "sad" },
-    "DEAD": { "animations": [ "dead" ], "overlay": "sad" },
-    "WALK_HAPPY": { "animations": [ "walk" ], "overlay": "happy" },
-    "WALK_SAD": { "animations": [ "walk" ], "overlay": "sad" },
-    "RUN_HAPPY": { "animations": [ "run" ], "overlay": "happy"  },
-    "RUN_SAD": { "animations": [ "run" ], "overlay": "sad"  },
-    "DUCK": { "animations": [ "duck" ], "overlay": "happy"  },
-    "ANGRY": { "animations": [ "angry" ], "overlay": "happy"  },
-    "DYING_HAPPY": { "animations": [ "dying" ], "overlay": "happy"  },
-    "DYING_SAD": { "animations": [ "dying" ], "overlay": "sad"  }
-  },
+  "stats":[
+    {
+      "id": "level",
+      "type": "number",
+      "value": "2",
+      "perSecond": "0",
+      "max": "10",
+      "effects":[]
+    },
+    {
+      "id": "xp",
+      "type": "number",
+      "value": "300",
+      "perSecond": "0",
+      "max": "500",
+      "effects":[
+        { "when": ">=_100%", "then": "MOOD_POWERUP" }
+      ]
+    },
+    { 
+      "id":"hunger",
+      "label":"Hunger",
+      "value": "0",
+      "perSecond": ".5",
+      "max": "67",
+      "fullIsGood": false,
+      "doesKill": true,
+      "effects":[
+        { "when": "<_35%", "then": "MOOD_FULL" },
+        { "when": ">_75%", "then": "MOOD_HUNGRY" }
+      ]
+    },
+    { 
+      "id":"stealth",
+      "label":"Stealth",
+      "value": "50",
+      "perSecond": "-1",
+      "max": "126",
+      "fullIsGood": true,
+      "doesKill": false,
+      "effects":[
+        { "when": "<_30%", "then": "MOOD_EXPOSED" },
+        { "when": ">_50%", "then": "MOOD_SNEAKY" }
+      ]
+    }
+  ],
   "moods":{
     "MOOD_POWERUP":  { "label": "Power UP", "moodType": 1 },
     "MOOD_FULL":  { "label": "Full", "moodType": 1 },
@@ -83,56 +115,21 @@
       "then": "IDLE_HAPPY"
     }
   ],
-  "statz":{
-    "timestamp": null,
-    "stats": [
-      {
-        "id": "level",
-        "type": "number",
-        "value": "2",
-        "perSecond": "0",
-        "max": "10",
-        "effects":[]
-      },
-      {
-        "id": "xp",
-        "type": "number",
-        "value": "300",
-        "perSecond": "0",
-        "max": "500",
-        "effects":[
-          { "when": ">=_100%", "then": "MOOD_POWERUP" }
-        ]
-      },
-      { 
-        "id":"hunger",
-        "label":"Hunger",
-        "value": "0",
-        "perSecond": ".5",
-        "max": "67",
-        "fullIsGood": false,
-        "doesKill": true,
-        "effects":[
-          { "when": "<_35%", "then": "MOOD_FULL" },
-          { "when": ">_75%", "then": "MOOD_HUNGRY" }
-        ]
-      },
-      { 
-        "id":"stealth",
-        "label":"Stealth",
-        "value": "50",
-        "perSecond": "-1",
-        "max": "126",
-        "fullIsGood": true,
-        "doesKill": false,
-        "effects":[
-          { "when": "<_30%", "then": "MOOD_EXPOSED" },
-          { "when": ">_50%", "then": "MOOD_SNEAKY" }
-        ]
-      }
-    ]
+  "behaviors": {
+    "DEFAULT": { "animations": [ "idle_01" ], "overlay": "happy" },
+    "IDLE_HAPPY": { "animations": [ "idle_01" ], "overlay": "happy" },
+    "IDLE_SAD": { "animations": [ "idle_sad" ], "overlay": "sad" },
+    "DEAD": { "animations": [ "dead" ], "overlay": "sad" },
+    "WALK_HAPPY": { "animations": [ "walk" ], "overlay": "happy" },
+    "WALK_SAD": { "animations": [ "walk" ], "overlay": "sad" },
+    "RUN_HAPPY": { "animations": [ "run" ], "overlay": "happy"  },
+    "RUN_SAD": { "animations": [ "run" ], "overlay": "sad"  },
+    "DUCK": { "animations": [ "duck" ], "overlay": "happy"  },
+    "ANGRY": { "animations": [ "angry" ], "overlay": "happy"  },
+    "DYING_HAPPY": { "animations": [ "dying" ], "overlay": "happy"  },
+    "DYING_SAD": { "animations": [ "dying" ], "overlay": "sad"  }
   },
-  "graphics":{
+  "animations":{
     "idle_01":{
       "sprite": "Neenya",
       "speed": "15",
