--- a/public/data/pets/rizzo-raccoon/data.jsonc
+++ b/public/data/pets/rizzo-raccoon/data.jsonc
@@ -5,15 +5,50 @@
   "name": "Rizzo",
   "scene": "outside",
   "thumbnail": "thumbnail.jpg",
-  "behaviors": {
-    "DEFAULT": { "animations": [ "Raccoon_Idle1" ] },
-    "IDLE": { "animations": [ "Raccoon_Idle1" ] },
-    "SAD": { "animations": [ "Raccoon_Still" ] },
-    "CASTIN": { "animations": [ "Raccoon_Castin" ] },
-    "NANA_RAGE": { "animations": [ "Raccoon_NanaRage1" ] },
-    "WALK": { "animations": [ "Raccoon_Walk1" ] },
-    "DEAD": { "animations": [ "Raccoon_Dead1" ] }
-  },
+  "stats":[
+    {
+      "id": "level",
+      "type": "number",
+      "value": "64",
+      "perSecond": "0",
+      "max": "100",
+      "fullIsGood": true
+    },
+    {
+      "id": "xp",
+      "type": "number",
+      "value": "888",
+      "perSecond": "0",
+      "max": "20000",
+      "fullIsGood": true
+    },
+    {
+      "id": "hunger",
+      "value": "0",
+      "perSecond": "1",
+      "max": "500",
+      "doesKill": true,
+      "fullIsGood": false,
+      "effects":[
+        { "when": ">=_25%", "then": "MOOD_HUNGRY" },
+        { "when": "<=_5%", "then": "MOOD_FULL" }
+      ]
+    },
+    { 
+      "id":"mana",
+      "label":"Banana Mana",
+      "value": "1",
+      "perSecond": "3",
+      "max": "200",
+      "fullIsGood": true,
+      "doesKill": true,
+      "effects":[
+        { "when": ">=_90%", "then": "MOOD_MANA_HIGH" },
+        { "when": ">_50%", "then": "MOOD_MANA_MEDIUM" },
+        { "when": "<=_33%", "then": "MOOD_MANA_LOW" }
+      ]
+    }
+  ],
   "moods":{
     "MOOD_MANA_HIGH": { "label": "Nana'd up", "moodType": 1 },
     "MOOD_MANA_MEDIUM": { "label": "makin ba na na na na", "moodType": 1 },
@@ -53,54 +88,16 @@
       "then": "CASTIN"
     }
   ],
-  "statz":{
-    "timestamp": null,
-    "stats": [
-      {
-        "id": "level",
-        "type": "number",
-        "value": "64",
-        "perSecond": "0",
-        "max": "100",
-        "fullIsGood": true
-      },
-      {
-        "id": "xp",
-        "type": "number",
-        "value": "888",
-        "perSecond": "0",
-        "max": "20000",
-        "fullIsGood": true
-      },
-      {
-        "id": "hunger",
-        "value": "0",
-        "perSecond": "1",
-        "max": "500",
-        "doesKill": true,
-        "fullIsGood": false,
-        "effects":[
-          { "when": ">=_25%", "then": "MOOD_HUNGRY" },
-          { "when": "<=_5%", "then": "MOOD_FULL" }
-        ]
-      },
-      { 
-        "id":"mana",
-        "label":"Banana Mana",
-        "value": "1",
-        "perSecond": "3",
-        "max": "200",
-        "fullIsGood": true,
-        "doesKill": true,
-        "effects":[
-          { "when": ">=_90%", "then": "MOOD_MANA_HIGH" },
-          { "when": ">_50%", "then": "MOOD_MANA_MEDIUM" },
-          { "when": "<=_33%", "then": "MOOD_MANA_LOW" }
-        ]
-      }
-    ]
+  "behaviors": {
+    "DEFAULT": { "animations": [ "Raccoon_Idle1" ] },
+    "IDLE": { "animations": [ "Raccoon_Idle1" ] },
+    "SAD": { "animations": [ "Raccoon_Still" ] },
+    "CASTIN": { "animations": [ "Raccoon_Castin" ] },
+    "NANA_RAGE": { "animations": [ "Raccoon_NanaRage1" ] },
+    "WALK": { "animations": [ "Raccoon_Walk1" ] },
+    "DEAD": { "animations": [ "Raccoon_Dead1" ] }
   },
-  "graphics":{
+  "animations":{
     "Raccoon_NanaRage1":{
       "sprite": "Raccoon",
       "speed": "2",
