--- a/public/data/manifest.jsonc
+++ b/public/data/manifest.jsonc
@@ -24,6 +24,7 @@
       "type": "pets",
       "items": [
         { "id": "neenya", "url": "data/pets/neenya" },
+        { "id": "bunchie", "url": "data/pets/bunchie" },
         // { "id": "rizzo-raccoon", "url": "data/pets/rizzo-raccoon" },
         { "id": "hotdoug", "url": "data/pets/hot-doug" }
       ]
