move roaming and idle stuff to petbrain

--- a/public/data/pets/bunchie/data.jsonc
+++ b/public/data/pets/bunchie/data.jsonc
@@ -69,7 +69,18 @@
     "IDLE_ANGRY": { "animations": [ "Bunchie_Angry1" ] },
     "WALK": { "animations": [ "Bunchie_Walk1" ] },
     "DEAD": { "animations": [ "Bunchie_Dead1" ] }
-  },
+  },  
+  "statEvents":[
+    {
+      "id":"E_FEED",
+      "label": "Feed",
+      "statEffects":[
+        { "id":"hunger", "immediate":"-20" }
+      ],
+      "type":"event",
+      "cooldown": 1000
+    }
+  ],
   "animations":{
     "Bunchie_Still":{
       "sprite": "Bunchie",
