--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "reselect": "^4.0.0",
     "sanitize.css": "7.0.3",
     "serve": "^11.2.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "throttle-debounce": "^3.0.1"
   },
   "browserslist": [
     ">0.2%",
