--- a/package.json
+++ b/package.json
@@ -1,41 +1,54 @@
 {
-  "private": true,
+  "name": "tly-virtualpet",
   "homepage": "./",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@craco/craco": "^6.1.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "history": "^5.0.0",
+    "jsonc": "^2.0.0",
+    "node-fetch": "^2.6.1",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-image-fallback": "^8.0.0",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "styled-components": "^5.2.1",
+    "throttle-debounce": "^3.0.1",
+    "web-vitals": "^1.0.1"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "prettier": "1.15.3",
-    "react-scripts": "^3.1.2"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "dependencies": {
-    "babel-plugin-styled-components": "^1.10.0",
-    "connected-react-router": "4.5.0",
-    "jsonc": "^2.0.0",
-    "node-fetch": "^2.6.0",
-    "node-sass": "^4.13.1",
-    "query-string": "^6.11.0",
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
-    "react-image-fallback": "^8.0.0",
-    "react-redux": "5.1.1",
-    "react-router": "4.3.1",
-    "react-router-dom": "4.3.1",
-    "redux": "4.0.1",
-    "redux-actions": "^2.6.5",
-    "redux-thunk": "2.3.0",
-    "reselect": "^4.0.0",
-    "sanitize.css": "7.0.3",
-    "serve": "^11.2.0",
-    "styled-components": "^4.1.3"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
