--- a/public/data/pets/neenya/data.jsonc
+++ b/public/data/pets/neenya/data.jsonc
@@ -10,17 +10,17 @@
     {
       "id": "level",
       "type": "number",
-      "value": "2",
-      "perSecond": "0",
-      "max": "10",
+      "value": 2.0,
+      "perSecond": 0.0,
+      "max": 10.0,
       "effects":[]
     },
     {
       "id": "xp",
       "type": "number",
-      "value": "300",
-      "perSecond": "0",
-      "max": "500",
+      "value": 300.0,
+      "perSecond": 0.0,
+      "max": 500.0,
       "effects":[
         { "when": ">=_100%", "then": "MOOD_POWERUP" }
       ]
@@ -28,9 +28,9 @@
     { 
       "id":"hunger",
       "label":"Hunger",
-      "value": "0",
-      "perSecond": ".5",
-      "max": "67",
+      "value": 0.0,
+      "perSecond": 0.5,
+      "max": 67.0,
       "fullIsGood": false,
       "doesKill": true,
       "effects":[
@@ -41,9 +41,9 @@
     { 
       "id":"stealth",
       "label":"Stealth",
-      "value": "50",
-      "perSecond": "-1",
-      "max": "126",
+      "value": 50.0,
+      "perSecond": -1.0,
+      "max": 126.0,
       "fullIsGood": true,
       "doesKill": false,
       "effects":[
@@ -77,7 +77,7 @@
       "id":"E_POKE",
       "label": "Poke",
       "statEffects":[
-        { "id":"stealth", "immediate":"-5" }
+        { "id":"stealth", "immediate":-5.0 }
       ],
       "type":"event",
       "cooldown": 0
@@ -86,7 +86,7 @@
       "id":"E_SNEAK",
       "label": "Sneak",
       "statEffects":[
-        { "id":"stealth", "perSecond":"-1" }
+        { "id":"stealth", "perSecond":-1.0 }
       ],
       "type":"hold",
       "cooldown": 0
@@ -95,7 +95,7 @@
       "id":"E_SMOKEBOMB",
       "label": "Smoke Bomb",
       "statEffects":[
-        { "id":"stealth", "immediate":"35" }
+        { "id":"stealth", "immediate":35.0 }
       ],
       "type":"event",
       "cooldown": 6000
@@ -104,9 +104,9 @@
       "id":"E_EAT",
       "label": "Eat",
       "statEffects":[
-        { "id":"hunger", "immediate":"-10", "perSecond":"-1", "duration":"6000" },
-        { "id":"stealth", "immediate":"-10", "perSecond":"-1", "duration":"6000" }
-        //{ "id":"stealth", "perSecond":"2", "duration":"6000" } //- from cronchin on chips
+        { "id":"hunger", "immediate":-10.0, "perSecond":-1.0, "duration":6000 },
+        { "id":"stealth", "immediate":-10.0, "perSecond":-1.0, "duration":6000 }
+        //{ "id":"stealth", "perSecond":2.0, "duration":6000 } //- from cronchin on chips
       ],
       "type":"stack",
       "cooldown": 1000
@@ -199,42 +199,42 @@
   "animations":{
     "idle_01":{
       "sprite": "Neenya",
-      "speed": "15",
+      "speed": 15.0,
       "frames": [ 0, 8 ]
     },
     "idle_sad":{
       "sprite": "Neenya",
-      "speed": "15",
+      "speed": 15.0,
       "frames": [ 10 ]
     },
     "dead":{
       "sprite": "Neenya",
-      "speed": "15",
+      "speed": 15.0,
       "frames": [ 13, 14 ]
     },
     "walk":{
       "sprite": "Neenya",
-      "speed": "15",
+      "speed": 15.0,
       "frames": [ 1, 2 ]
     },
     "run":{
       "sprite": "Neenya",
-      "speed": "15",
+      "speed": 15.0,
       "frames": [ 6, 7 ]
     },
     "duck":{
       "sprite": "Neenya",
-      "speed": "15",
+      "speed": 15.0,
       "frames": [ 11 ]
     },
     "angry":{
       "sprite": "Neenya",
-      "speed": "15",
+      "speed": 15.0,
       "frames": [ 4, 5 ]
     },
     "dying":{
       "sprite": "Neenya",
-      "speed": "15",
+      "speed": 15.0,
       "frames": [ 9, 10, 11, 12, 13, 14 ]
     }
   },
