--- a/public/data/manifest.jsonc
+++ b/public/data/manifest.jsonc
@@ -24,6 +24,7 @@
       "items": [
         { "id": "neenya", "url": "data/pets/neenya" },
         { "id": "bunchie", "url": "data/pets/bunchie" },
+        { "id": "raccoon", "url": "data/pets/raccoon" },
         { "id": "rizzo-raccoon", "url": "data/pets/rizzo-raccoon" },
         { "id": "hotdoug", "url": "data/pets/hot-doug" }
       ]
