fix some params, add bario

--- a/public/data/manifest.jsonc
+++ b/public/data/manifest.jsonc
@@ -13,7 +13,8 @@
       "items": [
         { "id": "magnadoodle", "url": "data/scenes/magnadoodle" },
         { "id": "outside", "url": "data/scenes/outside" },
-        { "id": "dump", "url": "data/scenes/dump" }
+        { "id": "dump", "url": "data/scenes/dump" },
+        { "id": "shroomKingdom", "url": "data/scenes/shroom-kingdom" }
       ]
     },
     {
@@ -25,6 +26,7 @@
       "items": [
         { "id": "neenya", "url": "data/pets/neenya" },
         { "id": "bunchie", "url": "data/pets/bunchie" },
+        { "id": "bario", "url": "data/pets/bario" },
         { "id": "raccoon", "url": "data/pets/raccoon" },
         { "id": "rizzo-raccoon", "url": "data/pets/rizzo-raccoon" },
         { "id": "hotdoug", "url": "data/pets/hot-doug" }
