some mock data for items

--- a/public/data/manifest.jsonc
+++ b/public/data/manifest.jsonc
@@ -17,10 +17,10 @@
         { "id": "shroomKingdom", "url": "data/scenes/shroom-kingdom" }
       ]
     },
-    {
-      "type": "items",
-      "items": []
-    },
+    // {
+    //   "type": "items",
+    //   "items": []
+    // },
     {
       "type": "pets",
       "items": [
