--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonc": "^2.0.0",
     "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
+    "phaser": "3.54.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-image-fallback": "^8.0.0",
