WIP switching characters in phaser

--- a/public/data/manifest.jsonc
+++ b/public/data/manifest.jsonc
@@ -27,6 +27,7 @@
         { "id": "neenya", "url": "data/pets/neenya" },
         { "id": "bunchie", "url": "data/pets/bunchie" },
         { "id": "bario", "url": "data/pets/bario" },
+        { "id": "lario", "url": "data/pets/lario" },
         { "id": "raccoon", "url": "data/pets/raccoon" },
         { "id": "rizzo-raccoon", "url": "data/pets/rizzo-raccoon" },
         { "id": "hotdoug", "url": "data/pets/hot-doug" }
