--- a/public/data/pets/lario/data.jsonc
+++ b/public/data/pets/lario/data.jsonc
@@ -9,7 +9,7 @@
     "thinkRange": [ 500, 2000 ],
     "doRange": [ 1000, 5000 ],
     "jumpChance": 0.05,
-    "jumpForce": 0.8,
+    "jumpForce": 1,
     "maxVx": 3,
     "xForce": 1,
     "yForce": 1
@@ -185,6 +185,7 @@
       "image": "main.png",
       "scale": 5.0,
       "frameDims": [ 20, 35 ],
+      "frameSqueeze": { "x": 2, "y": -1, "w": -4, "h": -1 },
       "faceDirection": true,
       "orientation": 1,
       "defaults":{
