--- a/public/data/pets/lario/data.jsonc
+++ b/public/data/pets/lario/data.jsonc
@@ -3,7 +3,7 @@
   "type": "8bit",
   "animal": "Spanish Plummer",
   "name": "Lario",
-  "scene": "shroomKingdom",
+  "scene": "shroomSewer",
   "thumbnail": "thumbnail.jpg",
   "personality":{
     "thinkRange": [ 500, 2000 ],
